pp2/samples/stmtbad1.out

*** Error line 5.
    int a = 0;
          ^
*** syntax error

