pp2/samples/stmtbad1.decaf
int main() {
    /* Error: Variable declarations must occur before statements, and the two
     * cannot be combined as is done here.
     */
    int a = 0;
}
